# GDDRHammer

./: .gitignore  CLAUDE.md  README.md
exploit/: Makefile  README.md  mem_read_kernels.cuh  mem_read_time.cu  mem_read_utils.cuh
exploit/pyscripts/: README.md  dec2hex.py
exploit/scripts/: create_hugepage.sh  extract_pts.sh
gddrhammer_paper/: full.md
rowhammer/: README.md  run_delay_multi_gpus.sh  run_multibank_hammer_multi_gpus.sh  run_row_sets_multi_gpus.sh
rowhammer/src/: CMakeLists.txt
rowhammer/src/hammer/: multibank_hammer.cu  synchronization_gpu_select.cu
rowhammer/src/include/: rh_impls.cu  rh_impls.cuh  rh_kernels.cu  rh_kernels.cuh  rh_utils.cu  rh_utils.cuh
rowhammer/src/re_gddr/: bank_set_main.cu  conf_set_main.cu  drama_conflict_prober.cu  row_set_main.cu
rowhammer/util/: lock_freq.sh  parse_flips.py  process_delays.py  run_delay_8w_3t.sh  run_multibank_multi_gpus.py  run_timing_task.py  run_timing_task_multi_gpus.py
